- Added ability to zoom-in on the data-usage statistics - Added logic to prevent the context menu from overflowing the page - Moved `class CSSObject` `class Color` and `class ClipName` to `ext/polyfill.js` - Added ability to add channels to Live Reminders from stream previews (shortcut: `r`) - Fixed issue with fetching Xbox prices

--- a/ttv-tools/settings.css
+++ b/ttv-tools/settings.css
@@ -2049,6 +2049,18 @@ body.popup [pad-bottom] {
     padding-bottom: 1rem;
 }
 
+/* Data Usage */
+#data-usage--browser-storage-range[data-zoomed="true"i]::before {
+    content: 'ZOOM ENABLED';
+
+    font-size: 8pt;
+
+    border: 0;
+    padding: 0;
+    margin: 0;
+    outline: none;
+}
+
 /* Printing Only!*/
 @media print {
     html, body {
